generated-tests/tests/snapshots/ts/test_generated_with_statement.snap
---
source: generated-tests/tests/typescript.rs
expression: snapshot_content
---
Source Code:
with (obj4) { prop5; }

AST:
(program
  (with_statement
    (parenthesized_expression
      (identifier obj4)
    )
    (statement_block
      (expression_statement
        (identifier prop5)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "obj4",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 7,
            end_line: 1,
            end_column: 11,
        },
        SerializableUsage {
            name: "prop5",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 15,
            end_line: 1,
            end_column: 20,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
